--- a/index.html
+++ b/index.html
@@ -32,8 +32,8 @@
             </div>
         </div>
         <div class="quote">
-            <div class="quote-text"></div>
-            <div class="quote-name"></div>
+            <div class="quote-text">This is an inspiring quote, or a testimonial from a customer. Maybe it's just filing up space, or maybe perple will actually read it. Who knows? All I know is that it looks nice.</div>
+            <div class="quote-name">-Thor, God of Thunder</div>
         </div>
         <div class="call">
             <div class="call-text">
