--- a/index.html
+++ b/index.html
@@ -24,11 +24,23 @@
         </div>
         <div class="random-info">
             <div class="random-info-heading">Some random information</div>
-            <div class="randon-items">
-                <div class="item1"></div>
-                <div class="item2"></div>
-                <div class="item3"></div>
-                <div class="item4"></div>
+            <div class="random-items">
+                <div class="item1">
+                    <div class="item-illustration"></div>
+                    <div class="item-text">this is some subtext under an illustration or iamge</div>
+                </div>
+                <div class="item2">
+                    <div class="item-illustration"></div>
+                    <div class="item-text">this is some subtext under an illustration or iamge</div>
+                </div>
+                <div class="item3">
+                    <div class="item-illustration"></div>
+                    <div class="item-text">this is some subtext under an illustration or iamge</div>
+                </div>
+                <div class="item4">
+                    <div class="item-illustration"></div>
+                    <div class="item-text">this is some subtext under an illustration or iamge</div>
+                </div>
             </div>
         </div>
         <div class="quote">
