--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
             </div>
         </div>
         <div class="quote">
-            <div class="quote-text">This is an inspiring quote, or a testimonial from a customer. Maybe it's just filing up space, or maybe perple will actually read it. Who knows? All I know is that it looks nice.</div>
+            <div class="quote-text"><em>This is an inspiring quote, or a testimonial from a customer. Maybe it's just filing up space, or maybe perple will actually read it. Who knows? All I know is that it looks nice.</em></div>
             <div class="quote-name">-Thor, God of Thunder</div>
         </div>
         <div class="call">
